[package]
name = "audio-cleaner-standalone"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
rfd = "0.14"
hound = "3.5"
ndarray = "0.15"
tempfile = "3.10"
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet", tag = "v0.5.6", features = ["tract"] }
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.24", features = ["png", "jpeg", "gif"] }
